<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.algo.benchmarkapp.MainActivity">

    <EditText
        android:hint="@string/num_iter_text"
        android:id="@+id/num_iter"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="150dp"
        android:inputType="number"
        android:layout_height="60dp" />

    <EditText
        android:hint="@string/data_size_text"
        android:id="@+id/data_size"
        android:layout_toRightOf="@+id/num_iter"
        android:layout_width="200dp"
        android:inputType="number"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/run_button"
        android:layout_below="@+id/num_iter"
        android:text="@string/run_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="5dp"
        android:background="@drawable/border"
        android:id="@+id/log_text"
        android:text="@string/log_title"
        android:layout_below="@+id/run_button"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/log_text"
        android:id="@+id/mySpinner"></Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mySpinner"
        android:text="@string/run_one"
        android:id="@+id/run_one"/>

</RelativeLayout>
